--- a/StoryFactoryPage.html
+++ b/StoryFactoryPage.html
@@ -14,8 +14,8 @@
 
 <script>
 
-    const appName = 'c:Workshop_Booking_Screen_Flow';
-    const componentName = 'c:Workshop_Booking_Screen_Flow';
+    const appName = 'c:workshopBookingFlow';
+    const componentName = 'c:workshopBookingFlow';
     const lightningEndpoint = 'https://storyfactory--flowout.sandbox.my.site.com/forms';
     const targetElement = document.querySelector("[data-lightning-out]");
     const componentAttributes = {
