--- a/StoryFactoryPage.html
+++ b/StoryFactoryPage.html
@@ -8,7 +8,7 @@
     }
 
 </style>
-<script src="https://storyfactory--flowout.sandbox.my.site.com/forms/lightning/lightning.out.js"></script>
+<script src="https://storyfactory--flowout.sandbox.my.site.com/lightning/lightning.out.js"></script>
 
 <div data-lightning-out="true"></div>
 
@@ -16,7 +16,7 @@
 
     const appName = 'c:workshopBookingFlow';
     const componentName = 'c:workshopBookingFlow';
-    const lightningEndpoint = 'https://storyfactory--flowout.sandbox.my.site.com/forms';
+    const lightningEndpoint = 'https://storyfactory--flowout.sandbox.my.site.com';
     const targetElement = document.querySelector("[data-lightning-out]");
     const componentAttributes = {
 
