--- a/StoryFactoryPage.html
+++ b/StoryFactoryPage.html
@@ -14,7 +14,7 @@
 
 <script>
 
-    const appName = 'c:workshopBookingFlow';
+    const appName = 'c:LightningOutWorkshopBookingFlowAura';
     const componentName = 'c:workshopBookingFlow';
     const lightningEndpoint = 'https://storyfactory--flowout.sandbox.my.site.com';
     const targetElement = document.querySelector("[data-lightning-out]");
