--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     }
 
 </style>
-<script src="https://storyfactory--flowout.sandbox.my.site.com/lightning/lightning.out.js"></script>
+<script src="https://storyfactory--flowout.sandbox.my.site.com/forms/lightning/lightning.out.js"></script>
    
 
 <div data-lightning-out="true"></div>
@@ -17,7 +17,7 @@
 
     const appName = 'c:LightningOutWorkshopBookingFlowAura';
     const componentName = 'c:workshopBookingFlow';
-    const lightningEndpoint = 'https://storyfactory--flowout.sandbox.my.site.com';
+    const lightningEndpoint = 'https://storyfactory--flowout.sandbox.my.site.com/forms';
     const targetElement = document.querySelector("[data-lightning-out]");
     const componentAttributes = {
 
