--- a/StoryFactoryPage.html
+++ b/StoryFactoryPage.html
@@ -2,6 +2,10 @@
 
 <html>
 <style>
+    p{
+   font-size:1.5rem !important;
+   color:orange;
+   }
 
 </style>
 <script src="https://storyfactory--flowout.sandbox.my.site.com/forms/lightning/lightning.out.js"></script>
