--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <style>
-p,span, label, abbr, div{
+p,span, label, abbr, div, strong{
    font-size:1.5rem !important;
    color:orange;
    }
